tests/should_fail/logic_alias/multiple_aliases.stderr
error: A function cannot have multiple logic aliases
  --> multiple_aliases.rs:15:1
   |
15 | #[logic_alias(is_odd_logic)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
16 | #[logic_alias(is_even_logic)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `logic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

